--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,23 @@
     <title>JS Timer</title>
   </head>
   <body>
-    <h1>Hi</h1>
+    <div class="c-container o-wrap js-timer">
+      <div class="c-input o-flex">
+        <input
+          placeholder="Enter your timer name"
+          class="c-input__input c-input__item o-flex__item"
+          type="Yout timer name"
+        />
+        <div id="js-addBtn" class="c-input__item c-input__button o-flex__item">
+          Add
+        </div>
+      </div>
+    </div>
+    <div class="c-box__msg">
+      <div class="c-box__success"></div>
+      <div class="c-box__error"></div>
+    </div>
+
+    <script src="index.js"></script>
   </body>
 </html>
