new features, css - added 2 resolutions, local storage fix and improvement

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,17 @@
     <title>JS Timer</title>
   </head>
   <body>
+    <div class="header o-wrap o-flex o-flex--center">
+      <h1 class="header-title">TIMER App</h1>
+
+      <img
+        class="img header-img"
+        alt="https://www.flaticon.com/free-icons/timer"
+        src="/assets/timer.png"
+        alt=""
+        srcset=""
+      />
+    </div>
     <div class="c-container o-wrap js-timer">
       <div class="c-input o-flex">
         <input
@@ -18,6 +29,7 @@
           Add
         </div>
       </div>
+      <div class="content-wrapper"></div>
     </div>
     <div class="c-box__msg">
       <div class="c-box__success"></div>
