further css fixes

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,24 @@
           Add
         </div>
       </div>
-      <div class="content-wrapper"></div>
+      <div class="content-wrapper">
+        <div class="presentation">
+          <div class="o-flex">
+            <img
+              class="img-presentation"
+              src="/assets/4905798.jpg"
+              alt="https://www.freepik.com/free-vector/add-tasks-concept-illustration_12079895.htm#query=task&position=12&from_view=keyword&track=sph&uuid=b7ea6c91-6ef7-4a8b-a1b8-570c728be209"
+              srcset=""
+            />
+          </div>
+          <div class="o-flex">
+            <p>
+              <strong class="presentation-bold">Add and name your timers</strong> to keep track of your
+              tasks time comsumption!
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="c-box__msg">
       <div class="c-box__success"></div>
