localstorage data key moved to separate file, css fixes

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <div class="header o-wrap o-flex o-flex--center">
-      <h1 class="header-title">TIMER App</h1>
+      <h1 class="header-title">
+        TIMER App
+      </h1>
 
       <img
         class="img header-img"
@@ -31,7 +33,7 @@
       </div>
       <div class="content-wrapper">
         <div class="presentation">
-          <div class="o-flex">
+          <div class="o-flex o-flex--center">
             <img
               class="img-presentation"
               src="/assets/4905798.jpg"
@@ -41,8 +43,10 @@
           </div>
           <div class="o-flex">
             <p>
-              <strong class="presentation-bold">Add and name your timers</strong> to keep track of your
-              tasks time comsumption!
+              <strong class="presentation-bold"
+                >Add and name your timers</strong
+              >
+              to keep track of your tasks time comsumption!
             </p>
           </div>
         </div>
