--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,12 @@
   </head>
   <body>
     <div class="header o-wrap o-flex o-flex--center">
-      <h1 class="header-title">
-        TIMER App
-      </h1>
+      <h1 class="header-title">TIMER App</h1>
 
       <img
         class="img header-img"
         alt="https://www.flaticon.com/free-icons/timer"
-        src="/assets/timer.png"
+        src="assets/timer.png"
         alt=""
         srcset=""
       />
@@ -36,7 +34,7 @@
           <div class="o-flex o-flex--center">
             <img
               class="img-presentation"
-              src="/assets/4905798.jpg"
+              src="assets/4905798.jpg"
               alt="https://www.freepik.com/free-vector/add-tasks-concept-illustration_12079895.htm#query=task&position=12&from_view=keyword&track=sph&uuid=b7ea6c91-6ef7-4a8b-a1b8-570c728be209"
               srcset=""
             />
