--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
       <div class="c-input o-flex">
         <input
           placeholder="Enter your timer name"
-          class="c-input__input c-input__item o-flex__item"
+          class="c-input__input c-input__item o-flex__item main-input"
           type="Yout timer name"
         />
         <div id="js-addBtn" class="c-input__item c-input__button o-flex__item">
