--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,6 @@
       <div class="c-box__error"></div>
     </div>
 
-    <script src="index.js"></script>
+    <script src="bundle.js"></script>
   </body>
 </html>
